<resources>
    <string name="app_name">AIDLmulti-languageTest</string>
    <string name="print_Chinese">Chinese(中文)</string>
    <string name="print_Traditional_Chinese">Traditional Chinese(繁体中文)</string>
    <string name="print_english">English(英文)</string>
    <string name="print_Korean">한국의(韩语)</string>
    <string name="print_Japanese">日本語(日文)</string>
    <string name="print_Indonesia">Bahasa Indonesia(印尼语)</string>
    <string name="print_Malay">Bahasa Melayu(马来语)</string>
    <string name="print_Catalonia">catalá(加泰罗尼亚语)</string>
    <string name="print_Czech">čeština(捷克语)</string>
    <string name="print_Denmark">Dansk(丹麦语)</string>
    <string name="print_German">Deutsch(德语)</string>
    <string name="print_Estonia">eesti(爱沙尼亚语)</string>
    <string name="print_Spain">Español(西班牙语)</string>
    <string name="print_Philippines">Filipino(菲律宾语)</string>
    <string name="print_French">Français(法语)</string>
    <string name="print_Croatia">hrvatski(克罗地亚语)</string>
    <string name="print_Italy">Italiano(意大利语)</string>
    <string name="print_Latvia">latviešu(拉脱维亚语)</string>
    <string name="print_Lithuania">Lietuvių(立陶宛语)</string>
    <string name="print_Hungary">Magyar(匈牙利语)</string>
    <string name="print_Dutch">Nederlands(荷兰语)</string>
    <string name="print_Norway">Norsk bokmal(挪威语)</string>
    <string name="print_poland">Polski(波兰语)</string>
    <string name="print_Portugal">Protuguês(葡萄牙语)</string>
    <string name="print_Romania">româna(罗马尼亚语)</string>
    <string name="print_Slovakia">Slovenčina(斯洛伐克语)</string>
    <string name="print_Slovenia">Slovenščina(斯洛文尼亚语)</string>
    <string name="print_Finland">Suomi(芬兰语)</string>
    <string name="print_Sweden">Svenska(瑞典语)</string>
    <string name="print_Vietnam">tiếng việt(越南语)</string>
    <string name="print_Turkey">Türkçe(土耳其语)</string>
    <string name="print_Greek">Ελληνικά(希腊语)</string>
    <string name="print_Bulgaria">Български(保加利亚语)</string>
    <string name="print_Kazakh">қазақ тілі(哈萨克语)</string>
    <string name="print_Russian">Русский(俄罗斯语)</string>
    <string name="print_Serbia">српски(塞尔维亚语)</string>
    <string name="print_Ukraine">українська(乌克兰语)</string>
    <string name="print_Thai">ไทย(泰语)</string>
    <string name="reset_motor_high_temp_status">Rest Moter Heigh Temp Status</string>
    <string name="out_of_paper">The printer is out of paper</string>
    <string name="exists_paper">The printer paper is ready</string>
    <string name="printer_is_working">The printer is working</string>
    <string name="printer_high_temp_alarm">Printer high temperature alarm</string>
    <string name="motor_high_temp_alarm">Motor high temperature alarm</string>
    <string name="printer_current_task_print_complete">The print task has been printed</string>
    <string name="printer_exception">Printer Exception</string>
    <string name="unknown_error">unknown status</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="exit">Exit</string>
</resources>
